added scikit learn to poetry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "microvan_analysis"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 pandas = "^1.5.2"
+scikit-learn = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 spyder = "^5.4.1"
